[package]
name = "fetch_configuration"
version = "0.2.0"
authors = ["Pankaj Chaudhary <pankajchaudhary172@gmail.com>"]
edition = "2018"

description = "Library to fetch configuration from config file."
repository = "https://github.com/PankajChaudhary5/fetch_configuration.git"
readme = "README.md"
keywords = ["configuration"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
json = "0.12.0"
